fix(ui): App - normalize app spacing

--- a/packages/ui/src/app/app.module.css
+++ b/packages/ui/src/app/app.module.css
@@ -14,7 +14,7 @@
 
 .summaryContainer {
   padding-top: var(--space-medium);
-  padding-bottom: var(--space-small);
+  padding-bottom: var(--space-xsmall);
 }
 
 .tabsContainer {
